# adcash

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  adcash.db  alembic.ini  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 243ca3a51c56_rename_amount_to_cpa_amount_and_added_.py
backend/app/: main.py
backend/app/api/endpoints/: countries.py  influencers.py  offers.py
backend/app/api/schemas/: categories.py  country.py  influencers.py  offers.py
backend/app/core/: config.py  enums.py  logging.py
backend/app/db/: base.py  database.py
backend/app/db/models/: __init__.py  categories.py  country.py  influencer_custom_payouts.py  influencers.py  offer_categories.py  offers.py
backend/app/db/seed/: initial_seed.py
backend/app/services/: __init__.py  country_service.py  influencer_service.py  offer_service.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_logging.py  test_schemas.py
backend/tests/api/: test_offers.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts  utils.js
frontend/src/components/: Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  OfferPage.tsx  OffersGrid.tsx  Pagination.tsx  SearchFilters.tsx  StatusMessage.tsx  index.ts
frontend/src/config/: constants.ts
frontend/src/lib/: utils.ts
(+3 files in other folders)
